# ready

./: .gitignore  .travis.yml  BUILD.txt  BaseRD.cpp  BaseRD.hpp  CMakeLists.txt  Dockerfile  GrayScott_slow.cpp  GrayScott_slow_3D.cpp  GrayScott_slow_3D.hpp  Info.plist.in  InfoPanel.hpp  OpenCL2D_2Chemicals.cpp  OpenCL3D_2Chemicals.cpp  OpenCL3D_2Chemicals.hpp  OpenCL_Dyn_Load.c  OpenCL_Formula.hpp  OpenCL_FullKernel.cpp  OpenCL_FullKernel.hpp  OpenCL_RD.cpp  OpenCL_RD.hpp  Properties.hpp  README.md  README.txt  TODO.txt  app.cpp  app.hpp  app.icns  dialogs.hpp  frame.hpp  prefs.hpp  utils.cpp  utils.hpp  wxVTKRenderWindowInteractor.cxx
GrayScott_OpenMP/: CMakeLists.txt  gray_scott_openmp.cpp
MeinhardtStripes/: CMakeLists.txt
ReaDy/: CMakeLists.txt  main-ready.cpp
ReaDy/calc_Brusselator/: brusselator.cpp  brusselator.h
ReaDy/calc_Gray_Scott/: dicek.h  gray_scott_hwivector.cpp  gray_scott_hwivector.h
ReaDy/ready_display/: ready_display.cpp
Ready/: BUILD.txt  BaseOverlay.cpp  BaseOverlay.hpp  BaseRD.cpp  BaseRD.hpp  CHANGES.txt  CMakeLists.txt  DataPanel.cpp  DataPanel.hpp  GrayScott.cpp  GrayScott.hpp  GrayScott_slow.cpp  GrayScott_slow.hpp  GrayScott_slow_3D.cpp  GrayScott_slow_3D.hpp  HelpPanel.cpp  HelpPanel.hpp  IDs.hpp  IO_XML.cpp  IO_XML.hpp  Info.plist.in  InfoPanel.cpp  InfoPanel.hpp  OpenCL2D_2Chemicals.cpp  OpenCL2D_2Chemicals.hpp  OpenCL3D_2Chemicals.cpp  OpenCL3D_2Chemicals.hpp  OpenCL_Dyn_Load.c  OpenCL_Dyn_Load.h  OpenCL_Formula.cpp  OpenCL_Formula.hpp  OpenCL_FullKernel.cpp  OpenCL_FullKernel.hpp  OpenCL_RD.cpp  OpenCL_RD.hpp  OpenCL_nDim.cpp  OpenCL_nDim.hpp  OpenCL_utils.cpp  OpenCL_utils.hpp  PatternsPanel.cpp  (+27 more)
Ready/Help/: about.html  action.html  changes.html  credits.html  edit.html  file.html  formats.html  help.html  index.html  introduction.html  mouse.html  problems.html  quickstart.html  refs.html  tips.html  view.html
Ready/Patterns/: CarterBays_3D.vti  FHN.vti  FHN_neuron.vti  FHN_pulsate3D.vti  bays_3D.vti  bilaplacian_interpolation.vti  bunny.vtu  conway_life.vti  cow.vtu  grayscott_demo.vti  grayscott_lesmes_noisy.vti  grayscott_noisy_solitons_mitosis.vti  grayscott_parameter_map.vti  heat_equation.vti  heat_equation_interpolation.vti  hex_B2oS2m34_gliders.vtu  hex_buss.vtu  horse.vtu  kernel_test.vti  larger-than-life.vti  meinhardt_stripes.vti  munafo-uskate.vti  penrose.vtu  penrose_goucher_glider.vtu  penrose_imai_glider_B2SC4.vtu  penrose_life_oscillators.vtu  schlogl.vti  smoothlife3d_glider.vti  smoothlife_smoothglider.vti  smoothlife_smoothlifeL.vti  sphere.vtp  sphere.vtu  tetramesh.vtu  tri_life.vtu  turing.vti  wave_equation.vti
Ready/bitmaps/: add.xpm  backwards.xpm  draw.xpm  info.xpm  open.xpm  patterns_down.xpm  pick.xpm  redo.xpm  stop.xpm  undo.xpm  zoomin_curs.xpm
Ready/patterns/: grayscott_demo.vti
Ready/resources/: app.icns  appicon.xpm  file.icns
Ready/src/: Doxyfile.in
Ready/src/cmd/: main.cpp
SpeedComparisons/: CMakeLists.txt
SpeedComparisons/Display/: defs.h
SpeedComparisons/GrayScott/: gray_scott.cpp
SpeedComparisons/GrayScott_HWIVector/: CMakeLists.txt  dicek.h  display_hwiv.cpp  display_hwiv.h  gray_scott_hwivector.cpp  hwi_vector.h
SpeedComparisons/GrayScott_OpenCL/: gray_scott_opencl.cpp  grayscott_kernel.cl
SpeedComparisons/GrayScott_OpenCL_2x2/: gray_scott_opencl_2x2.cpp  grayscott_kernel_2x2.cl
SpeedComparisons/GrayScott_OpenCL_Image/: CMakeLists.txt  gray_scott_opencl_image.cpp  grayscott_kernel_image.cl
SpeedComparisons/GrayScott_OpenCL_Image_2x2/: CMakeLists.txt  gray_scott_opencl_image_2x2.cpp  grayscott_kernel_image_2x2.cl
SpeedComparisons/GrayScott_OpenCL_Local/: CMakeLists.txt  gray_scott_opencl_local.cpp  grayscott_kernel_local.cl
SpeedComparisons/GrayScott_OpenCL_float2/: gray_scott_opencl_float2.cpp  grayscott_kernel_float2.cl
SpeedComparisons/GrayScott_OpenMP/: gray_scott_openmp.cpp
SpeedComparisons/GrayScott_SSE/: CMakeLists.txt  gray_scott_SSE.cpp
SpeedComparisons/GrayScott_SSE_OpenMP/: CMakeLists.txt  gray_scott_SSE_OpenMP.cpp
SpeedComparisons/GrayScott_double/: CMakeLists.txt  gray_scott_double.cpp
trunk/: CMakeLists.txt  README.txt
trunk/Brandeisator/: brandeisator.cpp
trunk/Brusselator/: CMakeLists.txt  brusselator.cpp
trunk/ComplexGinzbergLandau/: CMakeLists.txt  complex_ginzberg_landau.cpp
trunk/Display/: defs.h  display.cpp  display.h
trunk/EdblomOrbanEpstein/: CMakeLists.txt  edblom_orban_epstein.cpp
trunk/FitzHughNagumo/: CMakeLists.txt  fitz_hugh_nagumo.cpp
trunk/FitzHughNagumo3D/: CMakeLists.txt  fitz_hugh_nagumo_3d.cpp  render_volume.py
trunk/GrayScott/: gray_scott.cpp
trunk/GrayScott_OpenCL/: CMakeLists.txt  gray_scott_opencl.cpp  grayscott_kernel.cl
trunk/Linear/: linear.cpp
trunk/MeinhardtSpots/: CMakeLists.txt  meinhardt_spots.cpp
trunk/MeinhardtStripes/: meinhardt_stripes.cpp
trunk/Oregonator/: CMakeLists.txt  oregonator.cpp
trunk/ReaDy/: CMakeLists.txt  main-ready.cpp  util.cpp
trunk/ReaDy_gui/: BaseRD.cpp  BaseRD.hpp  BaseRD_2D.cpp  BaseRD_2D.hpp  BaseRD_3D.cpp  CMakeLists.txt  GrayScott_slow.cpp  GrayScott_slow.hpp  GrayScott_slow_3D.hpp  Info.plist.in  README.txt  app.cpp  frame.cpp  frame.hpp  ready.rc  vtk_pipeline.cpp  vtk_pipeline.hpp  wxVTKRenderWindowInteractor.cxx  wxVTKRenderWindowInteractor.h
trunk/Ready/: BUILD.txt  BaseOverlay.cpp  BaseOverlay.hpp  BaseRD.cpp  BaseRD.hpp  CHANGES.txt  CMakeLists.txt  DataPanel.cpp  GrayScott.cpp  GrayScott.hpp  GrayScott_slow.cpp  GrayScott_slow.hpp  GrayScott_slow_3D.cpp  GrayScott_slow_3D.hpp  HelpPanel.cpp  HelpPanel.hpp  IDs.hpp  IO_XML.cpp  IO_XML.hpp  InfoPanel.cpp  InfoPanel.hpp  OpenCL2D_2Chemicals.cpp  OpenCL2D_2Chemicals.hpp  OpenCL3D_2Chemicals.cpp  OpenCL3D_2Chemicals.hpp  OpenCL_Dyn_Load.c  OpenCL_Formula.cpp  OpenCL_FullKernel.cpp  OpenCL_FullKernel.hpp  OpenCL_RD.cpp  OpenCL_RD.hpp  OpenCL_nDim.cpp  OpenCL_nDim.hpp  OpenCL_utils.cpp  OpenCL_utils.hpp  PatternsPanel.cpp  PatternsPanel.hpp  Properties.cpp  Properties.hpp  README.txt  (+23 more)
trunk/Ready_old_CLI/: CMakeLists.txt
trunk/Schlogl/: schlogl.cpp
trunk/Schnakenberg/: schnakenberg.cpp
(+1543 files in other folders)
