cmake_minimum_required(VERSION 2.6)

project(ReactionDiffusion)

add_subdirectory(TuringSpots)
add_subdirectory(MeinhardtSpots)
add_subdirectory(MeinhardtStripes)
add_subdirectory(GrayScott)
add_subdirectory(Brusselator)
add_subdirectory(Oregonator)
add_subdirectory(Brandeisator)
add_subdirectory(FitzHughNagumo)
add_subdirectory(FitzHughNagumo3D)
add_subdirectory(ComplexGinzbergLandau)
add_subdirectory(Schlogl)
add_subdirectory(Schnakenberg)
add_subdirectory(EdblomOrbanEpstein)
add_subdirectory(Linear)
